Review Request 3785 -Fixed padding/wordwrap issue on Jobs page (username) and Service Error Modal -Tweaks some of the compression code to send as string -Changed parameters for some service calls from ResponseBody to URL parms -Fixed title of ServiceErrorModal to be more generic and not give status/errormsg in title -Fixed salesforceLead and salesforceAccount getting flipped in Create Model flow

--- a/le-ui/projects/leadprioritization/app/jobs/status/StatusStyles.scss
+++ b/le-ui/projects/leadprioritization/app/jobs/status/StatusStyles.scss
@@ -150,6 +150,13 @@ span.chevron-content.chevron-content-text {
             color: rgb(233, 33, 45);
         }
     }
+
+    span.job-status-username {
+        padding-right: 2em;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
 }
 
 /*adding the arrows for the breadcrumbs using rotated pseudo elements*/
