--- a/le-ui/projects/leadprioritization/assets/styles/style.scss
+++ b/le-ui/projects/leadprioritization/assets/styles/style.scss
@@ -1208,6 +1208,7 @@ Modals
 }
 .modal-body {
     padding: 40px;
+    word-wrap: break-word;
 }
 .modal-footer {
     text-align: center;
